2013-12-13  Alexander V. Lukyanov <lavv17f@gmail.com>

	* RateLimit.cc, RateLimit.h, ftpclass.cc: use RateLimit settings
	  to set maximum buffer size.
	* xstring.cc, xstring.h: (swap, set_length_no_z) new methods.
	* buffer.cc, buffer.h: (MoveDataHere) new method, optimize data
	  copying by swapping buffers.

2013-12-12  Alexander V. Lukyanov <lavv17f@gmail.com>

	* TimeDate.h: include sys/time.h to get struct timeval.
	* buffer.cc: don't shrink read buffer size.
	* ftpclass.cc, ftpclass.h: use xfer:buffer-size for max_buf size;

2013-12-11  Alexander V. Lukyanov <lavv17f@gmail.com>

	* xstring.cc, xstring.h: shrink buffer explicitly.
	* PollVec.cc, PollVec.h: use select; (FDReady) new method.
	* TimeDate.cc, TimeDate.h: change to microsecond resolution.
	* Timer.cc, Timer.h: (GetTimeoutTV) new method.
	* SMTask.cc, SMTask.h: use Timer::GetTimeoutTV; add resumed task to
	  the tail of new_tasks list.
	* buffer.cc, buffer.h: change buffer size tuning; remove last_got member;
	  don't call down->Do in BufferStacked; use last select result
	  to save a read() system call.
	* ftpclass.h: don't suspend control_recv so that control_sock gets
	  polled when delaying data read ops.
	* CharReader.cc: check last select result before reading.
	* FileCopy.cc: use microseconds for delaying reads; don't reset delay
	  on data unavailability; don't increase delay when read returned
	  enough data.

2013-12-09  Alexander V. Lukyanov <lavv17f@gmail.com>

	* FileCopy.cc, FileCopy.h: add a delay when Read returns too small
	  portions of data, it should decrease the number of syscalls.
	* Bencode.cc: fixed a mem leak (thanks to David Binderman).
	* FileCopyFtp.cc, FileCopy.cc: minor style changes.
	* ResMgr.cc, HttpDir.cc: remove unused old code.
	* log.cc: check Log::global for NULL, avoid SEGV on exit.

2013-12-06  Alexander V. Lukyanov <lavv17f@gmail.com>

	* xheap.h: min-heap implementation with random remove.
	* Timer.cc, Timer.h, Makefile.am: use xheap and xlist for Timer.
