@@ -5,6 +5,7 @@
 	* xstring.cc, xstring.h: (swap, set_length_no_z) new methods.
 	* buffer.cc, buffer.h: (MoveDataHere) new method, optimize data
 	  copying by swapping buffers.
+	* FileCopy.cc: tune read delaying; add comments.
 
 2013-12-12  Alexander V. Lukyanov <lavv17f@gmail.com>
 
